Added boilerplate/initial opreator for ServiceProxy

--- a/dfds-serviceproxy/serviceproxy.yaml
+++ b/dfds-serviceproxy/serviceproxy.yaml
@@ -3,4 +3,7 @@ kind: ServiceProxy
 metadata:
   name: "capsvc"
 spec:
-  services: "capability-service"
+  services:
+    - name: "whatever"
+      lookupServiceName: "Capability-Service"
+      lookupServiceNamespace: "selfservice"
