Ensure service gets created

--- a/dfds-serviceproxy/serviceproxy.yaml
+++ b/dfds-serviceproxy/serviceproxy.yaml
@@ -7,3 +7,6 @@ spec:
     - name: "whatever"
       lookupServiceName: "Capability-Service"
       lookupServiceNamespace: "selfservice"
+    - name: "harald"
+      lookupServiceName: "harald"
+      lookupServiceNamespace: "selfservice-herald-vbqkr"
