--- a/dfds-serviceproxy/operator-go/config/crd/bases/stable.dfds.cloud_serviceproxies.yaml
+++ b/dfds-serviceproxy/operator-go/config/crd/bases/stable.dfds.cloud_serviceproxies.yaml
@@ -47,11 +47,14 @@ spec:
                       type: string
                     lookupServiceNamespace:
                       type: string
+                    lookupServicePort:
+                      type: integer
                     name:
                       type: string
                   required:
                   - lookupServiceName
                   - lookupServiceNamespace
+                  - lookupServicePort
                   - name
                   type: object
                 type: array
