Added IAM role to assume in k8s manifest; Added feature toggling of operator controllers; Re-enabled ServiceProxy CRD controller
Squashed commit of the following:

commit 18326fd765fdd7dcbded373a1cb576ab4f1c4fbf
Author: Emil H. Clausen <sequoiia@hummel.yt>
Date:   Tue Mar 2 11:25:08 2021 +0100

    Added log statement when something is enabled

commit db5d157960b2bc8ff4ea58a1cb3519d21b5d0abf
Author: Emil H. Clausen <sequoiia@hummel.yt>
Date:   Tue Mar 2 11:22:16 2021 +0100

    Re-enabled ServiceProxy CRD controller; Added feature toggling of all controllers and HTTP API using environment variables

commit a9fee67653d035da737c8ea053ec5fbfb1dfab5b
Author: Emil H. Clausen <sequoiia@hummel.yt>
Date:   Tue Mar 2 11:06:28 2021 +0100

    Added IAM role to be assumed by ServiceProxy operator for accessing DynamoDB

--- a/dfds-serviceproxy/operator-go/k8s/deployment.yaml
+++ b/dfds-serviceproxy/operator-go/k8s/deployment.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: serviceproxy-operator
   namespace: developerautomation-xavgy
+  annotations:
+    iam.amazonaws.com/role: arn:aws:iam::642375522597:role/ServiceProxy-dyndb
   labels:
     project: developerautomation
     department: cloudengineering
