--- a/dfds-serviceproxy/operator-go/k8s/deployment.yaml
+++ b/dfds-serviceproxy/operator-go/k8s/deployment.yaml
@@ -27,6 +27,8 @@ spec:
       containers:
       - name: serviceproxy-operator
         image: 642375522597.dkr.ecr.eu-west-1.amazonaws.com/dfds.developerautomation-xavgy.serviceproxy:operator-#(Build.BuildId)
+        env:
+          SERVICEPROXY_ENABLE_SERVICEPROXY_CONTROLLER: false
         ports:
         - containerPort: 8090
           name: api
