--- a/dfds-serviceproxy/operator-go/k8s/deployment.yaml
+++ b/dfds-serviceproxy/operator-go/k8s/deployment.yaml
@@ -28,7 +28,8 @@ spec:
       - name: serviceproxy-operator
         image: 642375522597.dkr.ecr.eu-west-1.amazonaws.com/dfds.developerautomation-xavgy.serviceproxy:operator-#(Build.BuildId)
         env:
-          SERVICEPROXY_ENABLE_SERVICEPROXY_CONTROLLER: false
+          - name: SERVICEPROXY_ENABLE_SERVICEPROXY_CONTROLLER
+            value: "false"
         ports:
         - containerPort: 8090
           name: api
