--- a/dfds-serviceproxy/rbac/clusterrole-serviceproxy-operator.yaml
+++ b/dfds-serviceproxy/rbac/clusterrole-serviceproxy-operator.yaml
@@ -19,3 +19,11 @@ rules:
   - 'list'
   - 'get' 
   - 'watch'
+- apiGroups:
+  - "apps"
+  resources:
+  - deployments
+  verbs:
+  - 'list'
+  - 'get' 
+  - 'watch'
