--- a/dfds-serviceproxy/serviceannotated.yaml
+++ b/dfds-serviceproxy/serviceannotated.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-service
+  name: my-service-name
   annotations: 
-    dfds.serviceproxy.kubernetes.io/identifier: "my-service"
+    dfds.serviceproxy.kubernetes.io/identifier: "my-service-id"
 spec:
   selector:
     app: MyApp
