--- a/dfds-serviceui/DFDSServiceUi/DFDSServiceUi/DFDSServiceUi.csproj
+++ b/dfds-serviceui/DFDSServiceUi/DFDSServiceUi/DFDSServiceUi.csproj
@@ -15,6 +15,9 @@
     <Content Update="wwwroot\appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Update="wwwroot\swagger.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
