--- a/dfds-serviceapi/frontend/package.json
+++ b/dfds-serviceapi/frontend/package.json
@@ -11,8 +11,10 @@
     "@azure/core-http": "1.1.8",
     "@azure/msal-browser": "^2.11.1",
     "@azure/storage-blob": "12.2.1",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
