--- a/dfds-serviceapi/DFDSServiceAPI/DFDSServiceAPI/appsettings.json
+++ b/dfds-serviceapi/DFDSServiceAPI/DFDSServiceAPI/appsettings.json
@@ -9,9 +9,16 @@
   "AllowedHosts": "*",
   "ServiceProxy": {
     "Urls": [
-      "http://localhost:8090",
-      "http://localhost:8091" 
-
+      "http://localhost:8090"
+      //"http://localhost2:8091" 
     ]
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "ClientId": "8dd8aa2c-8897-4507-a110-ab20a6e32bce",
+    "TenantId": "73a99466-ad05-4221-9f90-e7142aa2f6c1",
+
+    // To call an API
+    "ClientSecret": ""
   }
 }
