--- a/dfds-serviceapi/DFDSServiceAPI/Service/Service.csproj
+++ b/dfds-serviceapi/DFDSServiceAPI/Service/Service.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="KubernetesClient" Version="4.0.15" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.27.0" />
+    <PackageReference Include="Microsoft.Identity.Client.Extensions.Msal" Version="2.18.0" />
   </ItemGroup>
 
 </Project>
