--- a/dfds-serviceapi/DFDSServiceAPI/DFDSServiceAPI/appsettings.json
+++ b/dfds-serviceapi/DFDSServiceAPI/DFDSServiceAPI/appsettings.json
@@ -11,7 +11,10 @@
     "Urls": [
       "http://localhost:8090"
       //"http://localhost2:8091" 
-    ]
+
+    ],
+    "ClientId": "8dd8aa2c-8897-4507-a110-ab20a6e32bce",
+    "ClientSecret": ""
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
