Moved out scopes from the code into appsettings.json

--- a/dfds-serviceapi/DFDSServiceAPI/DFDSServiceAPI/appsettings.json
+++ b/dfds-serviceapi/DFDSServiceAPI/DFDSServiceAPI/appsettings.json
@@ -14,7 +14,8 @@
 
     ],
     "ClientId": "8dd8aa2c-8897-4507-a110-ab20a6e32bce",
-    "ClientSecret": ""
+    "ClientSecret": "",
+    "ClientScopes": "api://1fd40af5-f871-4502-834b-34c92ec9023f/.default"
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
