--- a/dfds-serviceapi/DFDSServiceAPI/DFDSServiceAPI/DFDSServiceAPI.csproj
+++ b/dfds-serviceapi/DFDSServiceAPI/DFDSServiceAPI/DFDSServiceAPI.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="5.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.3" />
     <PackageReference Include="Microsoft.Identity.Web" Version="1.7.0" />
