Add bearer token auth functionality to swagger

--- a/dfds-serviceapi/DFDSServiceAPI/DFDSServiceAPI/appsettings.json
+++ b/dfds-serviceapi/DFDSServiceAPI/DFDSServiceAPI/appsettings.json
@@ -14,15 +14,11 @@
 
     ],
     "ClientId": "8dd8aa2c-8897-4507-a110-ab20a6e32bce",
-    "ClientSecret": "",
     "ClientScopes": "api://1fd40af5-f871-4502-834b-34c92ec9023f/.default"
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
     "ClientId": "8dd8aa2c-8897-4507-a110-ab20a6e32bce",
-    "TenantId": "73a99466-ad05-4221-9f90-e7142aa2f6c1",
-
-    // To call an API
-    "ClientSecret": ""
+    "TenantId": "73a99466-ad05-4221-9f90-e7142aa2f6c1"
   }
 }
