sign in as user. very basic

--- a/dfds-serviceui/DFDSServiceUi/DFDSServiceUi/wwwroot/appsettings.json
+++ b/dfds-serviceui/DFDSServiceUi/DFDSServiceUi/wwwroot/appsettings.json
@@ -1,4 +1,10 @@
-{
+﻿{
   "ApiUrl": "http://localhost:60291/",
-  "Blacklist": ["atlantis", "kube-system", "default", "monitoring"]
+  "Blacklist": [ "atlantis", "kube-system", "default", "monitoring" ],
+  "AzureAd": {
+    "ClientScopes": "api://8dd8aa2c-8897-4507-a110-ab20a6e32bce/Read.Services",
+    "Authority": "https://login.microsoftonline.com/73a99466-ad05-4221-9f90-e7142aa2f6c1/",
+    "ClientId": "1fd40af5-f871-4502-834b-34c92ec9023f",
+    "ValidateAuthority": true
+  }
 }
