--- a/dfds-serviceui/DFDSServiceUi/DFDSServiceUi/DFDSServiceUi.csproj
+++ b/dfds-serviceui/DFDSServiceUi/DFDSServiceUi/DFDSServiceUi.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="KubernetesClient" Version="4.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.3" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Authentication.WebAssembly.Msal" Version="5.0.3" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
 
